--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /.pnp
 .pnp.js
 
+#lock files
+package-lock.json
+yarn.lock
+
 # testing
 /coverage
 
@@ -21,3 +25,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
