--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es6": true
@@ -21,6 +21,6 @@ module.exports = {
     "rules": {
         "react/prefer-stateless-function": 0,
         "react/jsx-filename-extension": 0,
-        "react/jsx-one-expression-per-line": 0,
+        "react/jsx-one-expression-per-line": 0
     }
-};
+}
