--- a/.eslintrc
+++ b/.eslintrc
@@ -22,5 +22,12 @@
         "react/prefer-stateless-function": 0,
         "react/jsx-filename-extension": 0,
         "react/jsx-one-expression-per-line": 0
-    }
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "paths": ["src"]
+          }
+        }
+      }
 }
