--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "sass-loader": "^7.1.0"
