--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-typed": "^1.1.2",
     "sass-loader": "^7.1.0"
   },
   "scripts": {
