--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.0.1",
     "react-typed": "^1.1.2",
     "sass-loader": "^7.1.0"
   },
