--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "sunrinvoca",
   "version": "0.1.0",
   "private": true,
+  "homepage": "sunrinvoca.github.io",
   "dependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-config-prettier": "^4.2.0",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
