--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sunrinvoca",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sunrinvoca.github.io",
   "dependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-config-prettier": "^4.2.0",
@@ -20,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
