--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# firebase
+# Firebase
 .firebaserc
-firebase-debug.log
+.runtimeconfig.json
 firebase.json
+.firebase/
