--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: build
-          name: build
+          path: build
 
   deploy:
     name: Deploy
@@ -32,7 +32,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: build
-          name: build
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
