--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,35 +5,22 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-      - name: Install Dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: build
-          path: build
-
   deploy:
-    name: Deploy
+    name: Build and Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Download Artifact
-        uses: actions/download-artifact@master
-        with:
-          name: build
-          path: build
+        - name: Install
+          uses: borales/actions-yarn@v2.0.0
+          with:
+            cmd: install
+        - name: Build
+          run: |
+            yarn run build
       - name: Deploy to Firebase
+        if: success()
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
